Name:                   spritekit
Version:                0.5.0.0
Cabal-version:          >= 1.9.2
Build-type:             Simple
Synopsis:               Cocoa SpriteKit for Haskell
License:                AllRightsReserved
Author:                 Manuel M T Chakravarty
Maintainer:             Manuel M T Chakravarty <chak@justtesting.org>

Category:               Graphics, Animation, Games
Stability:              Experimental

-- This library is not self-contained. It's Objective-C components are ignored by Cabal and need to be managed separately.

Library
  Build-depends:        base              >= 4.0 && < 5,
                        directory         >= 1.0,
                        filepath          >= 1.0,
                        ghc-prim          >= 0.3.1,
                        language-c-inline >= 0.7.6,
                        language-c-quote  >= 0.8

  Exposed-modules:      Graphics.SpriteKit
  
  Other-modules:        Graphics.SpriteKit.Action
                        Graphics.SpriteKit.Color
                        Graphics.SpriteKit.Geometry
                        Graphics.SpriteKit.IO
                        Graphics.SpriteKit.Node
                        Graphics.SpriteKit.Path
                        Graphics.SpriteKit.Texture
                        Graphics.SpriteKit.Scene
                        Graphics.SpriteKit.Types
