Name:                   spritekit
Version:                0.9.0.2
Cabal-version:          >= 1.9.2
Build-type:             Simple
Synopsis:               Cocoa SpriteKit for Haskell
License:                BSD3
Author:                 Manuel M T Chakravarty
Maintainer:             Manuel M T Chakravarty <chak@justtesting.org>
Homepage:               https://github.com/mchakravarty/HaskellSpriteKit/
Bug-reports:            https://github.com/mchakravarty/HaskellSpriteKit/issues

Category:               Graphics, Animation, Games
Stability:              Experimental

-- This library is not self-contained. It's Objective-C components are ignored by Cabal and need to be managed separately.

Library
  Build-depends:        base              >= 4.0 && < 5,
                        bytestring        >= 0.10,
                        directory         >= 1.0,
                        filepath          >= 1.0,
                        ghc-prim          >= 0.3.1,
                        JuicyPixels       >= 3.0,
                        language-c-inline >= 0.7.10.0,
                        language-c-quote  >= 0.11.7.3

  Exposed-modules:      Graphics.SpriteKit
  
  Other-modules:        Graphics.SpriteKit.Action
                        Graphics.SpriteKit.Color
                        Graphics.SpriteKit.Event
                        Graphics.SpriteKit.Geometry
                        Graphics.SpriteKit.IO
                        Graphics.SpriteKit.Image
                        Graphics.SpriteKit.Node
                        Graphics.SpriteKit.Path
                        Graphics.SpriteKit.PhysicsBody
                        Graphics.SpriteKit.PhysicsWorld
                        Graphics.SpriteKit.Scene
                        Graphics.SpriteKit.Texture
                        Graphics.SpriteKit.Types
